...

        "Transportation/Transportation": "bus",
        "Transportation/Bicycle": "bicycle",
        "Transportation/Bus/Train": "tram",
        "Transportation/Car": "car",
        "Transportation/Gas/Fuel": "fuelpump",
        "Transportation/Hotel": "bed.double",
        "Transportation/Parking": "parkingsign",
        "Transportation/Plane": "airplane",
        "Transportation/Taxi": "car.side",

        "Utilities/Utilities": "banknote",
        "Utilities/Cleaning": "sparkles",
...
